log
Thu 04 May 2023 01:48:28 PM UTC: 
 tests:  0|5
total_score: 0/70
07333b1
Thu 04 May 2023 02:49:10 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
79f57f1
Thu 04 May 2023 02:49:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7814628
Thu 04 May 2023 03:33:04 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:9: error: unused variable ‘j’ [-Werror=unused-variable]
   55 |   int i,j;
      |         ^
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:15: error: array subscript 10 is outside array bounds of ‘int[10]’ [-Werror=array-bounds]
   50 |   return array[10];
      |          ~~~~~^~~~
sudoku.c:46:22: note: while referencing ‘array’
   46 | int iniciarArray(int array[10])
      |                  ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f19d5fe
Thu 04 May 2023 03:37:10 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:15: error: array subscript 10 is outside array bounds of ‘int[10]’ [-Werror=array-bounds]
   50 |   return array[10];
      |          ~~~~~^~~~
sudoku.c:46:22: note: while referencing ‘array’
   46 | int iniciarArray(int array[10])
      |                  ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
14416d5
Thu 04 May 2023 03:37:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘iniciarArray’:
sudoku.c:50:10: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   50 |   return array;
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ef50167
Thu 04 May 2023 03:37:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
794c82d
